# plenoptic-cshl-vision-2026

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: precommit.yml
docs/source/: conf.py  glossary.md  index.md
docs/source/exercises/: 1_simple_metamer.md  2_simple_eigendistortion.md  4_torchvision.md  5_glm.md  simple_eigendistortion.md  simple_metamer.md  textures.md  torchvision.md
docs/source/full/: introduction.md
jenkins/: Dockerfile  Jenkinsfile
scripts/: check_setup.py  setup.py  strip_text.py
