[project]
name = "plenoptic-cshl-vision-2026"
version = "0.1.0"
requires-python = ">=3.12"
authors = [
    {name = "William Broderick", email = "wbroderick@flatironinstitute.org"}
]
description = "Tutorial and exercises for plenoptic at CSHL Comp Vision 2026"
readme = "README.md"
license = "MIT"
dependencies = [
    "plenoptic @ git+https://github.com/plenoptic-org/plenoptic.git@torchvision",
    "requests",
    "rich",
    "click",
    "jupytext",
    'jupyterlab_myst>=2.6',
    "jupyterlab>=4.5",
    "torchvision",
    "timm",
]

[dependency-groups]
docs = [
    "sphinx",
    "myst-nb",
    "sphinx-book-theme",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-togglebutton",
    "sphinx-design",
]
