[project]
name = "plenoptic-cshl-vision-2026"
version = "0.1.0"
requires-python = ">=3.12"
authors = [
    {name = "William Broderick", email = "wbroderick@flatironinstitute.org"}
]
description = "Tutorial and exercises for plenoptic at CSHL Comp Vision 2026"
readme = "README.md"
license = "MIT"
dependencies = [
    "plenoptic @ git+https://github.com/plenoptic-org/plenoptic.git@torchvision",
    "requests",
    "rich",
    "click",
    "jupytext",
    'jupyterlab_myst>=2.6',
    "jupyterlab>=4.5",
    "torchvision",
    "timm",
]

[dependency-groups]
docs = [
    "sphinx",
    "myst-nb",
    "sphinx-book-theme",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-togglebutton",
    "sphinx-design",
]

dev = [
    "plenoptic[docs]",
    "ruff",
]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.ruff]
extend-include = ["*.ipynb"]
src = ["docs"]
# Exclude a variety of commonly ignored directories.
exclude = ["linting"]

# Set the maximum line length (same as Black)
line-length = 88

indent-width = 4 # same as Black

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes: basic static analysis for common errors like undefined names
    # and missing imports.
    "F",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # in particular, this looks for invalid escape sequences (has been an issue
    # for regex strings used in tests)
    "W",
    # docstrings, note that DOC rules (pydoclint) are all in preview, so have to be explicitly added
    "D", "DOC201", "DOC202", "DOC402", "DOC403", "DOC501",
    "ANN",
]
ignore = []

# allow preview rules, but require them to be explicitly added
preview = true
explicit-preview-rules = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.svg,*.css,*.pgm'
check-hidden = true
# ignore regex like [Tt]rue
ignore-regex = '\[[A-Z][a-z]\][a-z]+'
# ignore-words-list = ''
